tdf#163213: do not show OpenType features if the font has "morx" table

Change-Id: I589419f7ffe3db01848e711021c2efd1de07692b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174294
Reviewed-by: خالد حسني <khaled@libreoffice.org>
Tested-by: Jenkins